# FreeLog

./: .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sst.config.ts  tsconfig.json
.github/workflows/: auto-upgrade-dependencies.yml  auto-upgrade-node-dependencies.yml  build-and-test-ui.yml  build-and-test.yml
infra/: api.ts
stacks/: logs-stack.ts
