[workspace]
members = [
    "packages/free-log",
    "packages/models",
    "packages/rust-client",
    "packages/writer",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
awc = "3.7.0"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.77.0"
aws-sdk-cloudwatchlogs = "1.86.0"
aws-smithy-runtime-api = "1.8.0"
derive_builder = "0.20.2"
env_logger = "0.11"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
lambda-web = { version = "0.2.1", features = ["actix4"] }
lambda_runtime = "0.13.0"
log = { version = "0.4", features = ["release_max_level_trace"] }
pretty_env_logger = "0.5"
reqwest = { version = "0.12.16", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "sync"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
